--- a/hyena.cabal
+++ b/hyena.cabal
@@ -16,7 +16,8 @@ library
                      Hyena.Server
                      Network.Wai
 
-  other-modules:     Hyena.Http
+  other-modules:     Data.Enumerator
+                     Hyena.Http
                      Hyena.Logging
                      Hyena.Parser
 
@@ -25,8 +26,7 @@ library
                      filepath
   else
     build-depends:   base >= 2.1 && < 3
-  build-depends:     bsparser >= 0.1 && < 0.2,
-                     network >= 2.1 && < 2.3,
+  build-depends:     network >= 2.1 && < 2.3,
                      mtl >= 1 && < 1.2,
                      network-bytestring >= 0.1.1.2 && < 0.2,
                      unix
