--- a/hyena.cabal
+++ b/hyena.cabal
@@ -6,10 +6,7 @@ license-file:        LICENSE
 author:              Johan Tibell
 maintainer:          johan.tibell@gmail.com
 build-type:          Simple
-cabal-version:       >= 1.2
-
-flag split-base
-  description: Choose the new smaller, split-up base package.
+cabal-version:       >= 1.6
 
 library
   exposed-modules:   Hyena.Config
@@ -21,15 +18,10 @@ library
                      Hyena.Logging
                      Hyena.Parser
 
-  if flag(split-base)
-    build-depends:   base >= 3 && < 3.1, bytestring, containers, directory,
-                     filepath
-  else
-    build-depends:   base >= 2.1 && < 3
-  build-depends:     network >= 2.1 && < 2.3,
-                     mtl >= 1 && < 1.2,
-                     network-bytestring >= 0.1.1.2 && < 0.2,
-                     unix
-
+  build-depends:   base == 4.*, bytestring, containers, directory,
+                   filepath, network >= 2.1 && < 2.3,
+                   mtl >= 1 && < 1.2,
+                   network-bytestring >= 0.1.1.2 && < 0.2,
+                   unix, extensible-exceptions
   extensions:        Rank2Types
   ghc-options:       -funbox-strict-fields -Wall
