--- a/hyena.cabal
+++ b/hyena.cabal
@@ -42,3 +42,7 @@ library
   ghc-options: -funbox-strict-fields -Wall
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
+
+source-repository head
+  type:     git
+  location: git://github.com/tibbe/hyena.git
